--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72.png">
         <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57.png">
         <link rel="shortcut icon" href="images/ico/Symbol.png">
+        <link rel="icon" type="image/png" href="images/ico/Symbol.png" />
     </head>
     
     <body>
